# Android-basis2senior

./: Notice  README.md
01_Foundation/: README.md
02_UI/: README.md
02_UI/chapter1-master/app/: build.gradle
03_Animation/: Document_homework_20190121_张思凡.docx  README.md  Readme.md
03_Animation/Homework/: .gitignore  build.gradle
04_Network/: README.md
05_Storage/: README.md  Readme.md
05_Storage/Enhanced/chapter-5-storage-develop/: .gitignore
06_Video/: README.md
06_Video/Chapter6/app/: build.gradle
07_Camera/: README.md  Readme.md
07_Camera/Chapter7-camera/demo/: demo.apk
08_FaceDetect/: README.md  Readme.md
08_FaceDetect/chapter-9/app/: CMakeLists.txt
08_FaceDetect/chapter-9/app/src/androidTest/java/com/bytedance/ies/camerarecorddemoapp/: ExampleInstrumentedTest.java
08_FaceDetect/chapter-9/app/src/main/: AndroidManifest.xml
08_FaceDetect/chapter-9/app/src/main/cpp/: TEUtils.cpp
08_FaceDetect/chapter-9/app/src/main/cpp/include/: TEUtils.h  byted_effect_base_define.h  byted_effect_face_detect.h  log.h
08_FaceDetect/chapter-9/app/src/main/cpp/include/libyuv/: compare.h  compare_row.h  convert_argb.h  convert_from_argb.h  cpu_id.h  macros_msa.h  planar_functions.h  rotate.h  rotate_argb.h  scale_argb.h  scale_row.h
08_FaceDetect/chapter-9/app/src/main/java/com/bytedance/ies/camerarecorddemoapp/: Config.java  FaceDetectHelper.java  FaceInfo.java  ThreadPool.java  YUV2RGBUtil.java
08_FaceDetect/chapter-9/app/src/main/java/com/bytedance/ies/camerarecorddemoapp/gl/: CameraGLSurfaceView.java  Frame.java  GLMainActivity.java  IEncoder.java  IMuxer.java  SurfaceRenderer.java
08_FaceDetect/chapter-9/app/src/main/res/layout/: gl_main_activity.xml
08_FaceDetect/chapter-9/app/src/main/res/values/: strings.xml
HOMEWORK_20190118/: Readme.md
HOMEWORK_20190118/HelloWorld2/app/: build.gradle
HOMEWORK_20190118_Foundation/: Document_homework-20190118-张思凡.docx
HOMEWORK_20190119/: Readme.md
HOMEWORK_20190119/chapter1-master/: LICENSE  settings.gradle
HOMEWORK_20190119/pics/: homework_exercise1_20190119.webm  homework_exercise2_20190119.webm
HOMEWORK_20190119_UI/: Documen_homework_20190119_张思凡.docx  Readme.md
HOMEWORK_20190119_UI/chapter1-master/: README.md
HOMEWORK_20190119_UI/chapter1-master/homework/: build.gradle  homework-debug.apk
HOMEWORK_20190121/: Readme.md
HOMEWORK_20190121/Homework/ch3ex2/: build.gradle
HOMEWORK_20190121/pics/: homework_erercise1_20190121.webm
HOMEWORK_20190121_Animation/: Readme.md
HOMEWORK_20190121_Animation/Homework/: settings.gradle
HOMEWORK_20190122/: Readme.md
HOMEWORK_20190122_Network/: Readme.md
HOMEWORK_20190122_Network/Chapter4Classwork-fill_in_the_blanks_github/: README.md
HOMEWORK_20190123/: Readme.md
HOMEWORK_20190123_Storage/: Readme.md
HOMEWORK_20190124_Video/: Readme.md
HOMEWORK_20190124_Video/Chapter6/: .gitignore  README.md
HOMEWORK_20190125_Camera/: Readme.md
HOMEWORK_20190125_Camera/Chapter7-camera/: .gitignore
HOMEWORK_20190126_FaceDetect/: Readme.md
(+219 files in other folders)
